salesforce/force-app/main/default/objects/Lead/fields/Auto_Reply_Count__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reply_Count__c</fullName>
    <label>Auto Reply Count</label>
    <description>Auto-replies sent in the current thread. Loop breaker forces human takeover after 2.</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>