salesforce/force-app/main/default/objects/Lead/fields/Consent_Basis__c.field-meta.xml
<CustomField>
    <fullName>Consent_Basis__c</fullName>
    <label>Consent Basis</label>
    <description>Consent basis under which this lead may be contacted. Required for message reconstructability.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>