salesforce/force-app/main/default/objects/Lead/fields/Last_Contacted_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted_At__c</fullName>
    <label>Last Contacted At</label>
    <description>Timestamp of the most recent outbound message. Feeds the pipeline cooldown exclusion.</description>
    <type>DateTime</type>
</CustomField>