salesforce/force-app/main/default/objects/Lead/fields/Last_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Reply_At__c</fullName>
    <label>Last Reply At</label>
    <description>Timestamp of the most recent inbound reply from this lead.</description>
    <type>DateTime</type>
</CustomField>