salesforce/force-app/main/default/objects/Lead/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <description>Version of the classifier that produced Predicted_Intent__c.</description>
    <type>Text</type>
    <length>64</length>
</CustomField>