salesforce/force-app/main/default/objects/Lead/fields/Opt_Out_At__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_At__c</fullName>
    <label>Opt Out At</label>
    <description>When the opt-out was received. Written synchronously in the inbound transaction that recognized it.</description>
    <type>DateTime</type>
</CustomField>