salesforce/force-app/main/default/objects/Lead/fields/Opt_Out_Source__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Source__c</fullName>
    <label>Opt Out Source</label>
    <description>Where the opt-out came from (e.g. inbound_sms_guardrail, texttorrent_reconciliation, manual). Consent provenance is audit data.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>