salesforce/force-app/main/default/objects/Lead/fields/Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out__c</fullName>
    <label>Opted Out</label>
    <description>Set when the guardrail opt-out regex matches. Mirrors the AWS suppression list; never cleared automatically.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>