salesforce/force-app/main/default/objects/Lead/fields/Outreach_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Outreach_External_Id__c</fullName>
    <label>Outreach External Id</label>
    <description>Deterministic UUIDv5 assigned by the AWS cleansing pipeline. Bulk API 2.0 upsert key.</description>
    <type>Text</type>
    <length>36</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>