salesforce/force-app/main/default/objects/Lead/fields/Outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Status__c</fullName>
    <label>Outreach Status</label>
    <description>Live outreach state. Salesforce is the single system of record for this.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Human_Review</fullName>
                <label>Human Review</label>
            </value>
            <value>
                <fullName>Suppressed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>