salesforce/force-app/main/default/objects/Lead/fields/Predicted_Intent__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Intent__c</fullName>
    <label>Predicted Intent</label>
    <description>Latest classifier-predicted intent for this lead's most recent reply.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outreach_Intent</valueSetName>
    </valueSet>
</CustomField>