salesforce/force-app/main/default/objects/Lead/fields/Quiet_Hours_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Quiet_Hours_Timezone__c</fullName>
    <label>Quiet Hours Timezone</label>
    <description>IANA timezone of the recipient (e.g. America/New_York). Quiet hours (8am-9pm local) are enforced against this before every send; if unknown or invalid, we do NOT send.</description>
    <type>Text</type>
    <length>64</length>
</CustomField>